core/cu29_derive/tests/compile_fail/cu_msg/non_existent_id.stderr
error: Error deserializing configuration: Source node not found: unknown_src
          context:None
 --> tests/compile_fail/cu_msg/non_existent_id.rs:7:1
  |
7 | gen_cumsgs!("config/non_existent_id.ron");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `gen_cumsgs` (in Nightly builds, run with -Z macro-backtrace for more info)
